trunk/Archive2/dc/d3e1f8eef23c96/output
main.cpp:15:9: error: conflicting declaration 'x {anonymous}::x'
     ::x x;
         ^
main.cpp:13:9: note: previous declaration as 'int {anonymous}::x'
     int x;
         ^
main.cpp:13:9: warning: '{anonymous}::x' defined but not used [-Wunused-variable]
